--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p class="form">Запишіться <span>безкоштовно</span> та отримайте подарунок</p>
             <button type="button" class="button">Замовити дзвінок</button>
-            <p class="text-button" >Натискаючи на кнопку я погоджуюсь <a href="#">з політикою конфіденційності</a></p>
+            <p class="text-button" >Натискаючи на кнопку я погоджуюсь <a  class="text-button" href="#">з політикою конфіденційності</a></p>
            
         </section>
     </main>
