--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a class="link" href="#">Чому ми</a></li>
             <li><a class="link" href="#">Наші процедури</a></li>
             <li><a class="link" href="#">Контакти</a></li>
-            <li><a href="#" target="_blank"><img src="./Images/Tel.svg" alt="logo_tel"></a></li>
+            <li><a href="#" target="_blank"><img src="./Images/tel.svg" alt="logo_tel"></a></li>
             <li><a href="#" target="_blank"><img src="./Images/Instogram.svg" alt="logo_Facebook"></a></li>
             <li><a href="#" target="_blank"><img src="./Images/Facebook.svg" alt="logo_Instogram"></a></li>
             </ul>
@@ -110,7 +110,7 @@
             <li><a class="link, link-light" href="tel:+380960000007">+380 96 0000 007</a></li>
             <li><a class="link, link-light" href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
             <li><a class="link, link-light" href="https://maps.app.goo.gl/t16qeYZhrvLtMV1n7">Україна, м. Київ, вул. Тараса Шевченка 5</a></li>
-            <li><a href="#" target="_blank"><img src="./Images/Tel.svg" alt="logo_tel"></a></li>
+            <li><a href="#" target="_blank"><img src="./Images/tel.svg" alt="logo_tel"></a></li>
             <li><a href="#" target="_blank"><img src="./Images/Instogram.svg" alt="logo_Facebook"></a></li>
             <li><a href="#" target="_blank"><img src="./Images/Facebook.svg" alt="logo_Instogram"></a></li>
             <li><a class="link, link-light" href="#">Політика конфіденційності</a></li>
